fixed scrolling issue on mobile

--- a/style.css
+++ b/style.css
@@ -104,6 +104,9 @@ body {
   /* === Mobile === */
   
   @media (max-width: 767px) {
+    body {
+        overflow: auto;
+      }
     #showcase {
       position: static;
       width: 100%;
